feat: added prisma setup graphql setup and user module with resolver

--- a/apps/jobber-auth/project.json
+++ b/apps/jobber-auth/project.json
@@ -5,6 +5,9 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "build":{
+      "dependsOn": ["generate-types"]
+    },
     "test": {
       "executor": "@nx/jest:jest",
       "options": {
@@ -27,6 +30,18 @@
           "buildTarget": "jobber-auth:build:production"
         }
       }
+    },
+    "generate-types": {
+      "command": "prisma generate",
+       "options": {
+         "cwd": "apps/jobber-auth"
+        }
+    },
+    "migrate-prisma": {
+      "command": "prisma migrate dev",
+       "options": {
+         "cwd": "apps/jobber-auth"
+        }
     }
   }
 }
