--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-    "*.ts": ["nx affected:lint -- --fix --files"],
-    "*": ["nx format:write --files"]
+    "*.ts": ["nx affected:lint --fix"],
+    "*": ["nx format:write"]
 }
