--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-    "*.ts": ["nx affected:lint --fix"],
+    "*.ts": ["nx affected --target=lint --fix --files"],
     "*": ["nx format:write"]
 }
