--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@apollo/server": "^4.11.3",
     "@nestjs/apollo": "^13.0.4",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^13.0.4",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "graphql": "^16.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
@@ -39,6 +42,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
