--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^13.0.4",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
@@ -22,6 +23,8 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "graphql": "^16.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -45,6 +48,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^9.1.7",
