--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@golevelup/nestjs-discovery": "^4.0.3",
+    "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.13",
     "@nestjs/apollo": "^13.0.4",
     "@nestjs/common": "^10.0.2",
